# SMD_Control_Server

./: .README.md.swp  LICENSE  README.md
SMD_Control_Server/: .gitignore  Doxyfile  Makefile  Makefile.am  Makefile.in  README.md  SMDControlDaemon.c  SMD_Constants.h  SMD_Utilities.c  SMD_Utilities.h  build.sh  build.sh.DO_NOT_USE  configure  configure.ac
SMD_Control_Server.xcodeproj/: project.pbxproj
SMD_Control_Server/SMD_Server_Sketch/: SMD_Server_Sketch.ino
SMD_Control_Server/arduino_files/SMD_Server_Sketch/: SMD_Server_Sketch.ino
SMD_Control_Server/arduino_files/SMD_Server_Sketch/SMD_Server_Sketch.ino/: SMD_Server_Sketch.ino.ino
SMD_Control_Server/docs/: Doxyfile
SMD_Control_Server/docs/html/: _s_m_d___constants_8h.html  _s_m_d___constants_8h_source.html  _s_m_d___modbus_8h.html  _s_m_d___modbus_8h_source.html  _s_m_d___motor___commands_8h.html  _s_m_d___motor___commands_8h_source.html  _s_m_d___socket_ops_8h.html  _s_m_d___socket_ops_8h_source.html  _s_m_d___utilities_8h.html  _s_m_d___utilities_8h_source.html  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d0381950fc41278198232cb047ffc1f9.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  struct_words-members.html  struct_words.html
SMD_Control_Server/docs/html/search/: all_0.js  all_1.js  all_12.js  all_13.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_11.js  variables_2.js  variables_5.js  variables_6.js  variables_8.js  (+6 more)
SMD_Control_Server/docs/latex/: _s_m_d___constants_8h.tex  _s_m_d___modbus_8h.tex  _s_m_d___motor___commands_8h.tex  _s_m_d___socket_ops_8h.tex  _s_m_d___utilities_8h.tex  annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d0381950fc41278198232cb047ffc1f9.tex  files.tex  index.tex  refman.tex  struct_words.tex
SMD_Control_Server/src/: Makefile  Makefile.am  Makefile.in  SMDControlDaemon.c  SMD_Constants.c  SMD_Constants.h  SMD_Modbus.c  SMD_Modbus.h  SMD_Motor_Commands.c  SMD_Motor_Commands.h  SMD_SocketOps.c  SMD_SocketOps.h  SMD_Utilities.c  SMD_Utilities.h  config.h.in  main.c
SMD_Control_Server/src/.deps/: SMD_Constants.Po  SMD_Modbus.Po  SMD_Motor_Commands.Po  SMD_SocketOps.Po  SMD_Utilities.Po
SMD_Control_Server/src/headers/: SMD_Constants.h  SMD_SocketOps.h  SMD_Utilities.h
SMD_Control_Server/tests/: test.sh
(+5 files in other folders)
